[gd_scene load_steps=11 format=3 uid="uid://ddr2aoj2l6qh7"]

[ext_resource type="Script" path="res://Scenes/Abilities/ExplodingLog.gd" id="1_7jchy"]
[ext_resource type="Texture2D" uid="uid://bjv5ivhakyp40" path="res://Art/Characters/Hanzo/Exploding_Log-sheet.png" id="1_vf2ud"]
[ext_resource type="Texture2D" uid="uid://b270y57jmu1lp" path="res://Art/Characters/Hanzo/RedCircle.png" id="3_i3vlp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dr2wl"]
atlas = ExtResource("3_i3vlp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o0ns"]
atlas = ExtResource("3_i3vlp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_m3g8u"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr2wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o0ns")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_67h10"]
atlas = ExtResource("1_vf2ud")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6cvw"]
atlas = ExtResource("1_vf2ud")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_074h1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67h10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6cvw")
}],
"loop": true,
"name": &"log_blink",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h8gb2"]
radius = 105.0

[node name="ExplodingLog" type="Node2D"]
script = ExtResource("1_7jchy")

[node name="ExplosionRange" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.375, 3.375)
sprite_frames = SubResource("SpriteFrames_m3g8u")
autoplay = "default"
frame_progress = 0.33388

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.992079, 0.990398)
sprite_frames = SubResource("SpriteFrames_074h1")
animation = &"log_blink"
autoplay = "log_blink"
frame_progress = 0.101576

[node name="ExplosionRadius" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_h8gb2")
target_position = Vector2(0, 0)

[node name="TimeUntilExplode" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="TimeUntilExplode" to="." method="_on_time_until_explode_timeout"]
